avant maj majeur
