# api.yaml
@@ -1,4 +1,5 @@
-swagger: "2.0"
+swagger: 2.0
+openapi: 3.0.3
 info:
   title: Liberty Road RESTfull API
   description: Documention pour l'utisation de l'API Rest de Liberty Road. Réalisé par Valentin Nelis.
@@ -11,14 +12,91 @@ info:
   servers:
     -url: "http://localhost:5000"
     description: Le serveur local
+components:
+  securitySchemes:
+    bearerAuth: 
+      type: http
+      description: "Use /api/registration to get the JWT token"
+      scheme: bearer
+      bearerFormat: JWT
 
 tags:
+  - name: Authentification
+    description: Pour se connecter à l'API
   - name: hikkers
     description: Tout concernants les profiles utilisateurs
+  - name: paths
+    description: Tout concernants les chemins de randonnées
+
 paths:
+#Login
+  /api/login:
+    post:
+      tags:
+      - Authentification
+      summary: Renvoie un jeton d'authentification
+      consumes:
+        - application/json
+      description: Lien permettant de s'authentifier et de recevoir un token JWT
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                login:
+                  example: SuperUtilisateur
+                  type: string
+                password:
+                  example: LePassword
+                  type: string
+        required: true
+      responses:
+        200:
+          description: L'utilisateur a été connecté avec succés
+        400:
+          description: L'utilisateur demandé n'éxiste pas
+        401: 
+          description: Le Mot de passe est incorrect
+
+  /api/registration:
+    post:
+      tags:
+      - Authentification
+      summary: Permet de créer un compte
+      consumes:
+        - application/json
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                login:
+                  example: address@mail.com
+                  type: string
+                pseudo:
+                  example: Jean
+                  type: string
+                password:
+                  example: Password
+                  type: string
+                address:
+                  example: 18 Rue Barbe
+                  type: string
+      responses:
+        201:
+          description: l'utilisateur a été créé
+        400:
+          description: error:"parametre(s) manquant"
+        409:
+          description: L'utilisateur demandé existe déjà
+
 #GET
   /api/hikkers:
     get:
+      security:
+        - bearerAuth: []
       tags:
         - hikkers
       summary: Renvoie la liste de tous les Utilisateurs.
@@ -52,9 +130,11 @@ paths:
           description: Impossible de trouver la ressource demandée ! Essayer une autre URL !
         500:
           description: La liste des utilisateurs n'a pas pu être trouvé. Réessayer plus tard !
-  
+    
   /api/hikkers/{hikkerId}:
     get:
+      security:
+        - bearerAuth: []
       tags:
         - hikkers
       summary: Renvoie un objet utilisateur
@@ -66,8 +146,9 @@ paths:
           schema: 
             type: integer
         - in: query
-          name: withPaths
-          type: boolean
+          name: with
+          type: string
+          example: paths
       responses:
         200:
           description: Success
@@ -114,9 +195,71 @@ paths:
           description: L'utilisateur a été supprimé
         404:
           description: Impossible de trouver la ressource demandée ! Essayer une autre URL !
+    put:
+      security:
+        - bearerAuth: []
+      tags:
+        - hikkers
+      summary: Modification d'un utilisateur.
+      description: Permet de modifier un utilisateur dans la base de données.
+      requestBody:
+        content:
+          application/json:
+            schema:
+                properties:
+                  username:
+                    type: string
+                  address:
+                    type: string
+      responses:
+        200:
+          description: La liste des utilisateurs a bien été récupérée.  
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+              data:
+                type: array
+                items:
+                  type: object
+                  properties: 
+                    id:
+                      type: integer
+                    username:
+                      type: string
+                    address:
+                      type: string
+                    is_deleted:
+                      type: boolean
+                    createdAt:
+                      type: string
+                    appUserId:
+                      type: integer
+        404:
+          description: Impossible de trouver la ressource demandée ! Essayer une autre URL !
+        500:
+          description: La liste des utilisateurs n'a pas pu être trouvé. Réessayer plus tard !
+
+    patch:
+      security:
+        - bearerAuth: []
+      tags:
+        - hikkers
+      summary: Suppression d'un utilisateur.
+      description: Permet de supprimer un utilisateur dans la base de données.
+      responses:
+        200:
+          description: utilisateur(s) a bien été supprimé !  
+        500:
+          description: utilisateur(s) n'a pas pu être supprimé. Réessayer plus tard !
 
   /api/paths:
     get:
+      security:
+        - bearerAuth: []
+      tags:
+        - paths
       summary: Renvoie la liste de tous les Chemins.
       description: Permet de récupérer la liste de tous les Chemins enregistrés dans la base de données sans les coordonnées.
       responses:
@@ -148,9 +291,50 @@ paths:
           description: Impossible de trouver la ressource demandée ! Essayer une autre URL !
         500:
           description: La liste des Chemins n'a pas pu être trouvé. Réessayer plus tard !
-  
+    post:
+      security:
+        - bearerAuth: []
+      tags:
+      - paths
+      summary: Permet de créer un nouveau chemin de randonnée
+      consumes:
+        - application/json
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  example: Chemin sympathique
+                  type: string
+                description:
+                  example: description
+                  type: string
+                hikkerId:
+                  example: 1
+                  type: integer
+                latlongs:
+                    type: array
+                    items: 
+                      type: object
+                      properties:
+                        latitude:
+                          type: number
+                          example: 50.6412
+                        longitude:
+                          type: number
+                          example: 3.5666
+      responses:
+        200:
+          description: ok
+
   /api/paths/{pathId}:
     get:
+      security:
+      - bearerAuth: []
+      tags:
+      - paths
       summary: Renvoie un objet chemin
       description: Renvoie le chemin ayant l'id correspondant dans un format JSON
       parameters:
@@ -160,8 +344,9 @@ paths:
           schema: 
             type: integer
         - in: query
-          name: withLatLongs
-          type: boolean
+          name: with
+          example: latlongs
+          type: string
       responses:
         200:
           description: Success
@@ -246,6 +431,7 @@ paths:
           description: Impossible de trouver la ressource demandée ! Essayer une autre URL !
         500:
           description: La liste de toutes les coordonées GPS n'a pas pu être trouvé. Réessayer plus tard !
+
   /api/profiles:
     get:
       summary: Renvoie la liste de touts les profils.
@@ -281,3 +467,4 @@ paths:
           description: Impossible de trouver la ressource demandée ! Essayer une autre URL !
         500:
           description: La liste de tous les profils n'a pas pu être trouvé. Réessayer plus tard !
+
